@@ -1472,6 +1472,12 @@ ipmi_ctx_set_target (ipmi_ctx_t ctx,
       return (-1);
     }
 						
+  if (ctx->type == IPMI_DEVICE_UNKNOWN)
+    {
+      API_SET_ERRNUM (ctx, IPMI_ERR_DEVICE_NOT_OPEN);
+      return (-1);
+    }
+
   if (channel_number)
     {
       if (!IPMI_CHANNEL_NUMBER_VALID (*channel_number))
@@ -2147,6 +2153,10 @@ ipmi_ctx_close (ipmi_ctx_t ctx)
       return (-1);
     }
 
+  /* closing session - end channel/slave targeting */
+  ctx->target.channel_number_is_set = 0;
+  ctx->target.rs_addr_is_set = 0;
+  
   if (ctx->type == IPMI_DEVICE_LAN)
     _ipmi_outofband_close (ctx);
   else if (ctx->type == IPMI_DEVICE_LAN_2_0)
